<resources>
    <string name="app_name">GreenPrint</string>
    <string name="edit_zipcode">ENTER ZIPCODE</string>
    <string name="button_enter">ENTER</string>
    <string name="question_01">How many people live in your flat/house?</string>
    <string name="q1_1">1</string>
    <string name="q1_2">2</string>
    <string name="q1_3">3</string>
    <string name="q1_4">4</string>
    <string name="q1_5">>4</string>
    <string name="question_02">Is your electricity provider green?</string>
</resources>